# magazine-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-hardening.yml  stable-compatibility.yml
conformance/: check_golden.sh  golden.py
crates/mh-cli/: Cargo.toml
crates/mh-cli/src/: main.rs
crates/mh-db/: Cargo.toml
crates/mh-db/src/: lib.rs
crates/mh-domain/: Cargo.toml
crates/mh-domain/src/: lib.rs
crates/mh-fetch/: Cargo.toml
crates/mh-fetch/src/: lib.rs
crates/mh-host/: Cargo.toml
crates/mh-host/src/: lib.rs
crates/mh-protocol/: Cargo.toml
crates/mh-protocol/golden/: discover.hex  fetch_request.hex  initialize.hex  record.hex  record_batch.hex  state_query.hex
crates/mh-protocol/src/: framing.rs  golden.rs  lib.rs  message.rs
crates/mh-protocol/tests/: golden_test.rs
docs/: adoption-guide.md  agent-coordination.md  conformance-fixture-inventory-2026-06-27.md  migration-checklist.md  next-implementation-plan.md  plugin-host.md  protocol-v1-audit-2026-06-27.md  protocol-v1.md  python-sdk.md  release-hardening.md
docs/development/: bounded-plugin-runtime-limits-evidence-2026-07-02.md  record-batching-evidence-2026-07-02.md  two-repo-development-contract.md
docs/release/: 0.1.0-beta.1.md  public-visibility-checklist.md
examples/python-synthetic-plugin/: README.md  synthetic_plugin.py
plugins.d/: example.json
scripts/: release-hardening.sh
sdk/python/: pyproject.toml
sdk/python/src/magazine_core_plugin_sdk/: __init__.py  framing.py  models.py  protocol.py  runtime.py  stdout_guard.py
sdk/python/tests/: test_framing.py  test_protocol_models.py  test_public_api.py  test_runtime.py  test_stdout_guard.py
