[package]
name = "mh-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLite schema and ingestor for magazine-core records"

[dependencies]
mh-domain = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
