[package]
name = "mh-fetch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Safe host fetch broker for magazine-core plugins"

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { workspace = true }
url = "2"
