[package]
name = "mh-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Plugin host runtime for magazine-core"

[dependencies]
libc = "0.2"
mh-domain = { workspace = true }
mh-fetch = { workspace = true }
mh-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
